[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "torchxlstm"
version = "0.0.3"
description = "A pure pytorch implementation of xLSTM."
readme = "README.md"
requires-python = ">=3"
license = {file = "LICENSE.txt"}
keywords = ["xlstm", "lstm", "torch", "pytorch"]
authors = [
  {name = "Akaash Dash", email = "akaash.dash@gmail.com" }
]
maintainers = [
  {name = "Akaash Dash", email = "akaash.dash@gmail.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "torch"
]

[project.urls]
"Homepage" = "https://github.com/akaashdash/xlstm"
"Source" = "https://github.com/akaashdash/xlstm/"